--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "start-server-and-test start http-get://localhost:3000 cy:run",
     "eject": "react-scripts eject",
-    "cypress": "./node_modules/.bin/cypress open"
-
+    "cypress": "./node_modules/.bin/cypress open",
+    "cy:run": "cypress run"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.0",
-    "cypress": "^9.5.4"
+    "cypress": "^9.5.4",
+    "start-server-and-test": "^1.14.0"
   }
 }
